Time: 2 ms (99.63%) | Memory: 45.1 MB (41.54%) - LeetSync